# MeshSimplification

./: CMakeLists.txt  requirements.txt
Models/data/: Capital A.txt
lib/Debug/: OpenMeshCored.lib  OpenMeshToolsd.lib
lib/Release/: OpenMeshCore.lib  OpenMeshTools.lib
src/: CallBack.h  MyView.cpp  MyView.h  MyWindow.cpp  MyWindow.h  main.cpp
src/RenderUtilities/: BufferObject.h  CubeMap.h  MeshObject.cpp  MeshObject.h  Shader.h
src/Utilities/: ArcBallCam.cpp
src/shaders/: g_buffer.tesc  g_buffer.tese  picking.frag  picking.vert  simple.frag
